2010-06-29  François Sausset  <sausset@gmail.com>

Reviewed by Darin Adler.

        Add a test when a msubsup element is wrapped in a mrow element
        https://bugs.webkit.org/show_bug.cgi?id=36525

        * mathml/presentation/subsup.xhtml:
        * platform/mac/mathml/presentation/subsup-expected.checksum:
        * platform/mac/mathml/presentation/subsup-expected.png:
        * platform/mac/mathml/presentation/subsup-expected.txt:
2010-06-29  François Sausset  <sausset@gmail.com>

        Reviewed by Darin Adler.

        Fix a bug when a msubsup element is inside a mrow element
        https://bugs.webkit.org/show_bug.cgi?id=36525

        Test: mathml/presentation/subsup.xhtml

        * mathml/RenderMathMLSubSup.cpp:
        (WebCore::RenderMathMLSubSup::stretchToHeight):

Canonical link: https://commits.webkit.org/53108@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62152 268f45cc-cd09-0410-ab3c-d52691b4dbfc